@@ -272,3 +272,8 @@ else ()
     # Dummy target to ease invocation
     add_custom_target(${PROJECT_NAME}-headers-check)
 endif ()
+
+# armel and mipsel builds need to explicitly link in libatomic
+if (UNIX AND NOT APPLE)
+    target_link_libraries(${PROJECT_NAME} atomic)
+endif()
